alignment issues

--- a/src/app/professional-networking/my-profile-editable/my-profile-editable.component.css
+++ b/src/app/professional-networking/my-profile-editable/my-profile-editable.component.css
@@ -498,7 +498,7 @@ h3 {
   }
 
   .edit-icon {
-    margin-right: 800px;
+    margin-right: 400px;
   }
 
   /* #sug-head {} */
